# WDA

./: .gitignore  AGENTS.md  LICENSE  MAKEFILE  README  README.md  config.py  config.yaml  draw.py  log_config.ini  log_config.yaml  main.py  plot_config.yaml  pyproject.toml  sql_config.yaml
.github/workflows/: main.yml
app/: main.py
app/api/: __init__.py
app/api/v1/: get.py  post.py
app/api/v2/: post.py
app/core/: __init__.py  bootstrap.py  config.py
app/db/: sql.py
app/domain/: models.py
app/services/: __init__.py  plotting.py  weather.py
functions/: draw.py  init.py  tools.py
routers/: get.py  home_page.py  oauth.py  post.py
routes/: __init__.py  get.py  post.py
routes/v1/: __init__.py  get.py  post.py
routes/v2/: __init__.py  post.py
services/: bootstrap.py  config.py  elements.py  init.py  load_config.py  plot.py  postgresql.py  sql.py  utils.py
static/: index.html
static/css/: style.css
templates/: contact_success.html  index.html
web/: main_page.py
