[project]
name = "wda"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.9.0",
    "fastapi[standard]>=0.116.1",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "psycopg2-binary>=2.9.11",
    "pydantic",
    "pyinstaller>=6.15.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.35.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
